# tauri-app

./: .gitignore  .taurignore  README.md  package-lock.json  package.json  tailwind.config.ts
.github/: dependabot.yml
app/: layout.tsx  page.tsx
app/appSettings/: page.tsx
components/: notepostdialog.tsx  providers.tsx  sidebar.tsx  timelinenote.tsx  tlcolumn.tsx
lib/: bindings.ts  toast.ts
src-tauri/: .env.sample  Cargo.toml  tauri.conf.json
src-tauri/migrations/2024-03-31-133953_create_posts/: up.sql
src-tauri/migrations/2024-04-14-083215_create_timelines/: down.sql  up.sql
src-tauri/src/: commands.rs  db.rs  main.rs  schema.rs  service.rs
src-tauri/src/db/: account.rs  account_repo.rs  manager.rs  post.rs  post_repo.rs  timeline.rs  timeline_repo.rs
src-tauri/src/service/: logging.rs  store.rs
