[package]
name = "tauri-app"
version = "0.1.0-alpha.1"
description = "A Tauri App"
authors = ["meronmks"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [] }
specta = { version = "1.0.5", features = [ "chrono" ] }
tauri-specta = { version = "1.0.2", features = ["typescript"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
