[package]
name = "tauri-app"
version = "0.1.0-alpha.1"
description = "A Tauri App"
authors = ["meronmks"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.7", features = [] }
specta = { version = "1.0.5", features = [ "chrono" ] }
tauri-specta = { version = "1.0.2", features = ["typescript"] }
diesel = { version = "2.1.6", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
webbrowser = "1.0.1"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["process"] }
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.38"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
